merubah sekali lagi

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="headline">Hai___ <br>I'm Muhammad Galang</div>
+    <div class="headline">___ <br>I'm Muhammad Galang</div>
     <div class="subheadline">Pengumpulan tugas Github - Hostinger</div>
 </div>
 </body>
